tests/expectations/compiler/bugs/b28611.out
Error [ETYC0372117]: Expected anything but a mapping, tuple, or unit but type `(u32, u32)` was found.
    --> compiler-test:7:47
     |
   7 |         let b: bool = sig.verify(self.caller, t);
     |                                               ^
Error [ETYC0372117]: Expected anything but a mapping, tuple, or unit but type `(u8 => u8)` was found.
    --> compiler-test:8:47
     |
   8 |         let c: bool = sig.verify(self.caller, m);
     |                                               ^
